prevent tab button copy from wrapping on smaller screens

--- a/scss/_patterns_tabs.scss
+++ b/scss/_patterns_tabs.scss
@@ -108,6 +108,9 @@
 
       border-radius: 0;
       margin-right: 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
 
       &:not(:first-child) {
         border-left: 0;
